added HTML structure & basic CSS styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <title>My Website</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header id="main-header">
+        <div class="container">
+            <h1>My Website - Who Am I</h1>
+        </div>
+    </header>
+    
+    <nav id="Navigation">
+        <div class="container">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">My achilles' heel</a></li>
+                <li><a href="#">My dream</a></li>
+            </ul>
+        </div>
+    </nav>
+
+<section id="showcase">
+    <div class="container">
+        <h1>This is my first showcase.
+        </h1>
+    </div>
+ </section>
+
+    <div class="container">
+    <secton id="main">
+        <h1>Welcome to my page</h1>
+        <p>This is my page to tell you a little more about me.</p>
+    </secton>
+
+    <aside id="sidebar">
+        <p> insert sidebar text here </p>
+    </aside>
+    </div>
+
+    <footer id="main-footer">
+        <p>Copyright &copy 2022; My Website - Who Am I</p>
+    </footer>
 </body>
 </html>
