Added content to homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="main-header">
         <div class="container">
-            <h1>My Website - Who Am I</h1>
+            <h1>Welcome to my portfolio</h1>
         </div>
     </header>
     
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">My achilles' heel</a></li>
+                <li><a href="#">My joy</a></li>
                 <li><a href="#">My dream</a></li>
             </ul>
         </div>
@@ -27,19 +27,26 @@
 
 <section id="showcase">
     <div class="container">
-        <h1>This is my first showcase.
-        </h1>
+        <h1>I am Janice... Jan... JJ...</h1>
     </div>
  </section>
 
     <div class="container">
-    <secton id="main">
-        <h1>Welcome to my page</h1>
-        <p>This is my page to tell you a little more about me.</p>
-    </secton>
+        <secton id="main">
+            <h1>Here's a little about me...</h1>
+                <p>I am in the middle of a career transformation. <br> 
+                    Never in my wildest thoughts that I thought I would be embarking on a journey to become a programmer. </p>
+                <p> All my life to date, I have always been told what I should do, what is the better choice to make, and even 'you brain is just not wired that way', but I never really know what I like to do. </p>        <p>After plentiful of soul searching and self help books, I decided that I am ready to find that one thing that sparks joy for me to do. 
+                    I have always been good at what do no matter the job I held, not because I have a neck for it nor because I love it. <br> 
+                    The one simple reason is: I refuse to be crap at what I do. </p>
+                <p>Being a parent and trying to be a decent one no small task. I am thankful that my 2 gorgeous young boys taught me a very important life lesson. 
+                    It is never too late and I am free to express my passion in life. (well.. at least career wise) As they say, 'If you love what you do, you will never work a day in your life.'</p>
+                <p>So here I am, a bag of nerves and self frustration with the support of my dear family. <br>
+                    The journey has begun... and I feel like I am under the Northern Lights. </p>
+        </secton>
 
     <aside id="sidebar">
-        <p> insert sidebar text here </p>
+        <p> Special thanks to my partner in life for your continual support in releasing my inner geek that puts a smile on my face</p>
     </aside>
     </div>
 
