--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <nav id="Navigation">
         <div class="container">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">My joy</a></li>
-                <li><a href="#">My dream</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="myjoy.html">My joy</a></li>
+                <li><a href="mydream.html">My dream</a></li>
+            </ul>
             </ul>
         </div>
     </nav>
@@ -30,7 +30,6 @@
         <h1>I am Janice... Jan... JJ...</h1>
     </div>
  </section>
-
     <div class="container">
         <secton id="main">
             <h1>Here's a little about me...</h1>
