Added mydream page & fixed formatting

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
         </div>
     </nav>
 
-<section id="showcase">
-    <div class="container">
-        <h1>I am Janice... Jan... JJ...</h1>
-    </div>
- </section>
-    <div class="container">
+<main>
+    <section id="showcase">
+        <div class="container">
+            <h1>I am Janice... Jan... JJ...</h1>
+        </div>
+     </section>
+     <div class="container">
         <secton id="main">
             <h1>Here's a little about me...</h1>
                 <p>I am in the middle of a career transformation. <br> 
@@ -48,6 +49,10 @@
         <p> Special thanks to my partner in life for your continual support in releasing my inner geek that puts a smile on my face</p>
     </aside>
     </div>
+
+</main>
+
+   
 
     <footer id="main-footer">
         <p>Copyright &copy 2022; My Website - Who Am I</p>
