Updated mydream and fixed spacing errors

--- a/myjoy.html
+++ b/myjoy.html
@@ -29,8 +29,14 @@
         <div class="container">
             <div id="main">
                 <h1>Succulents</h1>
-                <p>These are little succulents I have around the house. It all started with how much my kids love them and having them around the house.<br>
-                    We now call them little pockets of joy as they are our mood lifters with their stunning colours and 'bouncy' looks.</p>
+                <p>These are little succulents I have around the house. It all started with how much my kids love them and having them around the house.</p>
+                <p>We now call them little pockets of joy as they are our mood lifters with their stunning colours and 'bouncy' looks. <br> These littke gems have taught us to be:
+                    <ul>
+                        <li>thoughtful (do they need more water or sunlight?</li>
+                        <li>resilience (they have shown us that even in less than ideal situations, when the environment has made appropriate changes, it can flourish and come back stronger and more beautiful than ever.</li>
+                        <li>appreciation (pausing and appreciating simple joys in life.</li>
+                    </ul> 
+                </p>
             </div>
            
         
